--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm i"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
